--- a/style.css
+++ b/style.css
@@ -71,7 +71,6 @@ body::before {
     text-align: center;
     margin: 20px auto;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.7); /* Adjust opacity as needed */
     border-radius: 20px;
 }
 
@@ -85,8 +84,14 @@ div {
     font-family: myFirstFont;
 }
 
+@media screen and (min-width: 800px) {
+    .container{
+        background-color: rgba(255, 255, 255, 0.7); /* Adjust opacity as needed */
 
-@media screen and (max-width: 1200px) {
+    }
+}
+
+@media screen and (max-width: 800px) {
     .container{
         width: 100%; /* Adjust width as needed */
         max-width: 80vh; /* Limit maximum width for larger screens */
@@ -100,6 +105,21 @@ div {
         height: 10vh;
         border-radius: 100px;
         font-size: 1.8vh;
+    }
+    .container2{
+        width: 50%; /* Set the width of the container */
+        text-align: center; /* Center the content inside the container */
+        padding: 20px; /* Just for demonstration */
+    }
+
+    .container2 {
+        position: absolute;
+        background-color: whitesmoke;
+        width: 70vh;
+        height: 60vh;
+        filter: opacity(30%);
+        border-radius: 20px;
+        z-index: 0; /* Set a lower value to be behind .container */
     }
 
 }
