--- a/style.css
+++ b/style.css
@@ -73,6 +73,8 @@ body::before {
     margin: 20px auto;
     padding: 20px;
     border-radius: 20px;
+    background: rgba(255, 255, 255, 0.2);
+
 }
 
 
@@ -85,42 +87,34 @@ div {
     font-family: myFirstFont;
 }
 
-@media screen and (min-width: 800px) {
-    .container{
-        background-color: rgba(255, 255, 255, 0.7); /* Adjust opacity as needed */
-
-    }
+.container table {
+    width: 100%;
+    height: 100%;
 }
 
+.container table td {
+    vertical-align: middle;
+}
+
+.download, .more {
+    display: inline-block;
+}
+
+
+
 @media screen and (max-width: 800px) {
-    .container{
-        width: 100%; /* Adjust width as needed */
-        max-width: 80vh; /* Limit maximum width for larger screens */
+    .container {
+        width: 100%;
+        max-width: 80vh;
     }
-    .app{
-        width: 20vh;
+    .app {
+        width: 15vh; /* Adjusted width */
+        border-radius: 25px;
     }
-
     .download, .more {
-        width: 25vh;
-        height: 10vh;
-        border-radius: 100px;
-        font-size: 1.8vh;
+        width: 20vh; /* Adjusted width */
+        height: 8vh; /* Adjusted height */
+        border-radius: 50px; /* Adjusted border radius */
+        font-size: 1.4vh; /* Adjusted font size */
     }
-    .container2{
-        width: 50%; /* Set the width of the container */
-        text-align: center; /* Center the content inside the container */
-        padding: 20px; /* Just for demonstration */
-    }
-
-    .container2 {
-        position: absolute;
-        background-color: whitesmoke;
-        width: 70vh;
-        height: 60vh;
-        filter: opacity(30%);
-        border-radius: 20px;
-        z-index: 0; /* Set a lower value to be behind .container */
-    }
-
 }
