--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body::before {
     filter: blur(10px);
 }
 
-.app {
+.app ,.pop_img{
     width: 25vh;
     border-radius: 50px;
     text-align: center;
@@ -48,10 +48,9 @@ body::before {
 }
 
 .more {
-    color: white;
+    color: black;
     background-image: url("./imgs/more.jpg");
     font-weight: bold;
-    color: black;
 }
 
 .download:hover {
@@ -100,6 +99,30 @@ div {
     display: inline-block;
 }
 
+.popup{
+    background-color: whitesmoke;
+    border-radius: 30px;
+    width: 80vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(0);
+    transition: transform 0.4s;
+}
+
+.pop_img{
+    width: 100px;
+    border-radius: 20%;
+    margin-top: -50px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.open-popup{
+    transform: translate(-50%,-50%) scale(1);
+}
+
+
+
 
 
 @media screen and (max-width: 800px) {
@@ -116,5 +139,8 @@ div {
         height: 8vh; /* Adjusted height */
         border-radius: 50px; /* Adjusted border radius */
         font-size: 1.4vh; /* Adjusted font size */
+    }
+    .popup{
+        max-width: 50vh;
     }
 }
