--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body::before {
     border-radius: 50px;
     text-align: center;
     margin: auto;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
 }
 
 .download, .more {
